feat: implement saga-based order orchestration with inventory/payment microservices
- Add new Go inventory-service with PostgreSQL persistence, idempotent reserve/release flows, stock query API, Redis event subscriber, structured JSON logging, correlation-id propagation, and load/chaos simulation endpoints.

- Add new Spring Boot payment-service with pay/refund APIs, transaction persistence, chaos controls (failure probability and delay), Redis event subscriber, structured error handling, and correlation-id aware logging.

- Refactor order-service into a saga orchestrator: persist saga steps, manage workflow state transitions, integrate retry with exponential backoff + simple circuit breaker, execute compensation (inventory release/payment refund), and expose saga workflow views.

- Extend API surface and cross-service behavior in api-gateway/product-service for distributed workflow compatibility and correlation handling.

- Update Docker Compose (dev + default) and environment templates to include inventory/payment/Redis and align runtime wiring for distributed local deployment.

- Enhance observability bootstrap (Prometheus config) and frontend UX layout/navigation updates for the expanded distributed system flows.

- Expand API test coverage with dedicated inventory/payment smoke scripts and a full-test orchestration script, plus upgraded order-service workflow tests.